# public/swagger.yaml
@@ -567,7 +567,7 @@ components:
             additionalProperties: false
         ScheduleHomeVisitPayload:
             properties:
-                id:
+                applicationID:
                     type: string
                     description: 'ID of application'
                     example: 64b14bd7ba2fba2af4b5338d
@@ -576,7 +576,7 @@ components:
                     description: 'Date for visit'
                     example: '2023-08-19T04:00:00Z'
             required:
-                - id
+                - applicationID
                 - visitDate
             type: object
             additionalProperties: false
@@ -737,11 +737,17 @@ components:
             properties:
                 shelterID:
                     type: string
+                    description: 'ID of shelter'
+                    example: 6475e9630044288a2b4880b5
                 rating:
                     type: number
                     format: double
+                    description: 'User''s given rating of shelter'
+                    example: '5'
                 reviewText:
                     type: string
+                    description: 'User''s given review text of shelter'
+                    example: 'Animal Haven Shelter provided an incredibly positive adoption experience. Highly recommended for anyone looking to adopt a pet.'
             required:
                 - shelterID
                 - rating
@@ -784,10 +790,16 @@ components:
             properties:
                 reasonNotScheduled:
                     type: string
+                    description: 'Reason for not scheduling visit'
+                    example: 'I had an unexpected personal commitment that consumed my attention during that time, and I missed the scheduling window.'
                 reasonToReactivate:
                     type: string
+                    description: 'Reason for requesting to reactivate'
+                    example: 'The commitment has been addressed, and I am now fully available to proceed with the visit scheduling.'
                 applicationID:
                     type: string
+                    description: 'ID of application'
+                    example: 6523d393da718fbc64f5b628
             required:
                 - reasonNotScheduled
                 - reasonToReactivate
@@ -798,8 +810,12 @@ components:
             properties:
                 reasonNotScheduled:
                     type: string
+                    description: 'Reason for not scheduling visit'
+                    example: 'I had an unexpected personal commitment that consumed my attention during that time, and I missed the scheduling window.'
                 reasonToReactivate:
                     type: string
+                    description: 'Reason for requesting to reactivate'
+                    example: 'The commitment has been addressed, and I am now fully available to proceed with the visit scheduling.'
             required:
                 - reasonNotScheduled
                 - reasonToReactivate
@@ -809,6 +825,8 @@ components:
             properties:
                 id:
                     type: string
+                    description: 'ID of notification'
+                    example: 6523fdbb5f59f9eb98f3163b
                 userEmail:
                     type: string
                 applicationID:
@@ -855,6 +873,8 @@ components:
             properties:
                 id:
                     type: string
+                    description: 'ID of notification'
+                    example: 6523fdbb5f59f9eb98f3163b
             required:
                 - id
             type: object
@@ -896,7 +916,7 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/UserPayload'
-    /auth/sendVerificationCode:
+    /auth/verificationCode:
         post:
             operationId: SendVerificationCode
             responses:
@@ -1496,7 +1516,7 @@ paths:
                                 $ref: '#/components/schemas/ApplictionResponseForUser'
                             examples:
                                 'Example 1':
-                                    value: {application: {id: 64b14bd7ba2fba2af4b5338d, status: 'Under Review', submissionDate: '2020-01-20', petImage: 'https://example.com/images/fluffy.jpg', petName: Fluffy, shelterName: 'Animal Haven Shelter', shelterID: 6475e9630044288a2b4880b5, microchipID: A123456789, residenceType: ownHouse, hasRentPetPermission: true, hasChildren: true, childrenAges: '2,6', hasOtherPets: true, otherPetsInfo: 'Cat 1, Dog 2', petAloneTime: 6, hasPlayTimeParks: true, petActivities: 'Playing fetch, walking', handlePetIssues: 'I will buy new shoes', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I will take him wherever I go', petOutlivePlans: 'My pet will inherit my property and my friend Alex will take care of him'}, canReview: true}
+                                    value: {application: {id: 64b14bd7ba2fba2af4b5338d, status: 'Under Review', submissionDate: '2020-01-20', petImage: 'https://example.com/images/fluffy1.jpg', petName: Fluffy, shelterName: 'Animal Haven Shelter', shelterID: 6475e9630044288a2b4880b5, microchipID: A123456789, residenceType: ownHouse, hasRentPetPermission: true, hasChildren: true, childrenAges: '2,6', hasOtherPets: true, otherPetsInfo: 'Cat 1, Dog 2', petAloneTime: 6, hasPlayTimeParks: true, petActivities: 'Playing fetch, walking', handlePetIssues: 'I will buy new shoes', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I will take him wherever I go', petOutlivePlans: 'My pet will inherit my property and my friend Alex will take care of him'}, canReview: true}
             summary: 'Accepts application info and creates application if all fields are valid'
             tags:
                 - Application
@@ -1521,7 +1541,7 @@ paths:
                                 $ref: '#/components/schemas/ApplictionResponseForUser'
                             examples:
                                 'Example 1':
-                                    value: {application: {id: 64b14bd7ba2fba2af4b5338d, status: 'Under Review', submissionDate: '2020-01-20', petImage: 'https://example.com/images/fluffy.jpg', petName: Fluffy, shelterName: 'Animal Haven Shelter', shelterID: 6475e9630044288a2b4880b5, microchipID: A123456789, residenceType: ownHouse, hasRentPetPermission: true, hasChildren: true, childrenAges: '2,6', hasOtherPets: true, otherPetsInfo: 'Cat 1, Dog 2', petAloneTime: 6, hasPlayTimeParks: true, petActivities: 'Playing fetch, walking', handlePetIssues: 'I will buy new shoes', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I will take him wherever I go', petOutlivePlans: 'My pet will inherit my property and my friend Alex will take care of him'}, canReview: true}
+                                    value: {application: {id: 64b14bd7ba2fba2af4b5338d, status: 'Under Review', submissionDate: '2020-01-20', petImage: 'https://example.com/images/fluffy1.jpg', petName: Fluffy, shelterName: 'Animal Haven Shelter', shelterID: 6475e9630044288a2b4880b5, microchipID: A123456789, residenceType: ownHouse, hasRentPetPermission: true, hasChildren: true, childrenAges: '2,6', hasOtherPets: true, otherPetsInfo: 'Cat 1, Dog 2', petAloneTime: 6, hasPlayTimeParks: true, petActivities: 'Playing fetch, walking', handlePetIssues: 'I will buy new shoes', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I will take him wherever I go', petOutlivePlans: 'My pet will inherit my property and my friend Alex will take care of him'}, canReview: true}
             summary: 'Returns an application''s details given id'
             tags:
                 - Application
@@ -1547,7 +1567,7 @@ paths:
                                 $ref: '#/components/schemas/AllApplicationsResponse'
                             examples:
                                 'Example 1':
-                                    value: {applications: [{id: 64b14bd7ba2fba2af4b5338d, status: 'Under Review', submissionDate: '2020-01-20', petImage: 'https://example.com/images/fluffy.jpg', petName: Fluffy, shelterName: 'Animal Haven Shelter', shelterID: 6475e9630044288a2b4880b5, microchipID: A123456789, residenceType: ownHouse, hasRentPetPermission: true, hasChildren: true, childrenAges: '2,6', hasOtherPets: true, otherPetsInfo: 'Cat 1, Dog 2', petAloneTime: 6, hasPlayTimeParks: true, petActivities: 'Playing fetch, walking', handlePetIssues: 'I will buy new shoes', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I will take him wherever I go', petOutlivePlans: 'My pet will inherit my property and my friend Alex will take care of him', applicantName: 'John Doe', homeVisitDate: '2023-08-19T06:00:00Z', shelterVisitDate: '2023-09-02T04:00:00Z', homeVisitEmailSentDate: '2023-08-15T10:51:48.510Z', shelterVisitEmailSentDate: '2023-08-31T10:51:48.510Z'}, {id: 64b14bd7ba2fba2af4b5338e, status: Approved, submissionDate: '2020-02-25', petImage: 'https://example.com/images/buddy.jpg', petName: Buddy, shelterName: 'Furry Friends Shelter', shelterID: 6475e9630044288a2b4880b6, microchipID: A987654321, residenceType: rentHouse, hasRentPetPermission: true, hasChildren: false, childrenAges: "", hasOtherPets: false, otherPetsInfo: "", petAloneTime: 4, hasPlayTimeParks: true, petActivities: 'Running, hiking', handlePetIssues: 'I will provide training', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I have a trusted pet sitter', petOutlivePlans: 'My sister will take care of him', applicantName: 'Jane Smith', homeVisitDate: '2023-08-19T06:00:00Z', shelterVisitDate: '2023-09-02T04:00:00Z', homeVisitEmailSentDate: '2023-08-15T10:51:48.510Z', shelterVisitEmailSentDate: '2023-08-31T10:51:48.510Z'}], totalPages: 10, applicationStatuses: ['Under Review', Approved, Rejected]}
+                                    value: {applications: [{id: 64b14bd7ba2fba2af4b5338d, status: 'Under Review', submissionDate: '2020-01-20', petImage: 'https://example.com/images/fluffy1.jpg', petName: Fluffy, shelterName: 'Animal Haven Shelter', shelterID: 6475e9630044288a2b4880b5, microchipID: A123456789, residenceType: ownHouse, hasRentPetPermission: true, hasChildren: true, childrenAges: '2,6', hasOtherPets: true, otherPetsInfo: 'Cat 1, Dog 2', petAloneTime: 6, hasPlayTimeParks: true, petActivities: 'Playing fetch, walking', handlePetIssues: 'I will buy new shoes', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I will take him wherever I go', petOutlivePlans: 'My pet will inherit my property and my friend Alex will take care of him', applicantName: 'John Doe', homeVisitDate: '2023-08-19T06:00:00Z', shelterVisitDate: '2023-09-02T04:00:00Z', homeVisitEmailSentDate: '2023-08-15T10:51:48.510Z', shelterVisitEmailSentDate: '2023-08-31T10:51:48.510Z'}, {id: 64b14bd7ba2fba2af4b5338e, status: Approved, submissionDate: '2020-02-25', petImage: 'https://example.com/images/buddy1.jpg', petName: Buddy, shelterName: 'Furry Friends Shelter', shelterID: 6475e9630044288a2b4880b6, microchipID: A987654321, residenceType: rentHouse, hasRentPetPermission: true, hasChildren: false, childrenAges: "", hasOtherPets: false, otherPetsInfo: "", petAloneTime: 4, hasPlayTimeParks: true, petActivities: 'Running, hiking', handlePetIssues: 'I will provide training', moveWithPet: 'I will take him with me', canAffordPetsNeeds: true, canAffordPetsMedical: true, petTravelPlans: 'I have a trusted pet sitter', petOutlivePlans: 'My sister will take care of him', applicantName: 'Jane Smith', homeVisitDate: '2023-08-19T06:00:00Z', shelterVisitDate: '2023-09-02T04:00:00Z', homeVisitEmailSentDate: '2023-08-15T10:51:48.510Z', shelterVisitEmailSentDate: '2023-08-31T10:51:48.510Z'}], totalPages: 10, applicationStatuses: ['Under Review', Approved, Rejected]}
             summary: 'Returns list of applications of a user'
             tags:
                 - Application
@@ -1625,7 +1645,7 @@ paths:
                     required: true
                     schema:
                         type: string
-    /application/scheduleHomeVisit:
+    /application/homeVisit:
         post:
             operationId: ScheduleHomeVisit
             responses:
@@ -1654,7 +1674,7 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/ScheduleHomeVisitPayload'
-    /application/scheduleShelterVisit:
+    /application/shelterVisit:
         post:
             operationId: ScheduleShelterVisit
             responses:
@@ -1683,7 +1703,7 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/ScheduleHomeVisitPayload'
-    /application/updateStatus:
+    /application/status:
         put:
             operationId: UpdateApplicationStatus
             responses:
@@ -1878,6 +1898,9 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/ReviewsResponse'
+                            examples:
+                                'Example 1':
+                                    value: {reviews: [{applicantName: 'John Doe', applicantEmail: johndoe@example.com, rating: 4, reviewText: 'Great experience overall. The staff were very friendly and the place was clean and well kept.'}, {applicantName: 'Jane Smith', applicantEmail: janesmith@example.com, rating: 5, reviewText: 'I had a wonderful experience here. The staff are very professional, caring, and compassionate. I couldn''t ask for more.'}, {applicantName: 'Mark Brown', applicantEmail: markbrown@example.com, rating: 3, reviewText: 'The place was decent, but it could use a little more organization. The staff were pleasant, but they seemed understaffed.'}], totalPages: 3}
             summary: 'Returns all reviews of a specific shelter'
             tags:
                 - Review
@@ -1885,6 +1908,12 @@ paths:
                 -
                     bearerAuth: []
             parameters:
+                -
+                    in: query
+                    name: shelterID
+                    required: true
+                    schema:
+                        type: string
                 -
                     in: query
                     name: page
@@ -1944,9 +1973,6 @@ paths:
                                     - message
                                     - code
                                 type: object
-                            examples:
-                                'Example 1':
-                                    value: {applicationID: 6475e9630044288a2b4880b5, reasonNotScheduled: 'I had an unexpected personal commitment that consumed my attention during that time, and I missed the scheduling window.', reasonToReactivate: 'The commitment has been addressed, and I am now fully available to proceed with the visit scheduling.'}
             summary: 'Accepts reactivation request and sends email to shelter'
             tags:
                 - ReactivationRequest
@@ -1969,13 +1995,22 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/ReactivationRequestResponse'
+                            examples:
+                                'Example 1':
+                                    value: {reasonNotScheduled: 'I had an unexpected personal commitment that consumed my attention during that time, and I missed the scheduling window.', reasonToReactivate: 'The commitment has been addressed, and I am now fully available to proceed with the visit scheduling.'}
             summary: 'Returns the reactivation request associated with given application ID'
             tags:
                 - ReactivationRequest
             security:
                 -
                     bearerAuth: []
-            parameters: []
+            parameters:
+                -
+                    in: query
+                    name: applicationID
+                    required: true
+                    schema:
+                        type: string
     /notification:
         get:
             operationId: GetallNotifications
@@ -1986,6 +2021,9 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/AllNotificationsResponse'
+                            examples:
+                                'Example 1':
+                                    value: {notifications: [{id: 6523fdbb5f59f9eb98f3163b, userEmail: johndoe@example.com, applicationID: 6523d393da718fbc64f5b628, status: 'Home Visit Requested', petImage: 'https://example.com/images/fluffy1.jpg', isSeen: true, isRead: false, actionUrl: /view/application/6523d393da718fbc64f5b628, date: '2023-10-09T13:18:51Z'}, {id: 6524006181eca8f269f376d9, userEmail: johndoe@example.com, applicationID: 6523d393da718fbc64f5b628, status: 'User Visit Scheduled', petImage: 'https://example.com/images/fluffy1.jpg', isSeen: true, isRead: false, actionUrl: /view/application/6523d393da718fbc64f5b628, date: '2023-10-16T13:18:51Z'}, {id: 6523f799f05d4012e0ab578c, userEmail: johndoe@example.com, applicationID: 6523d393da718fbc64f5b628, status: Approved, petImage: 'https://example.com/images/fluffy1.jpg', isSeen: true, isRead: true, actionUrl: /view/application/6523d393da718fbc64f5b628, date: '2023-10-24T13:18:51Z'}], totalPages: 3}
             summary: 'Returns all notifications of the user'
             tags:
                 - Notification
