# src/examples/reactivationRequest.ts
@@ -1,5 +1,4 @@
 export const reactivationRequestExample = {
-  applicationID: '6475e9630044288a2b4880b5',
   reasonNotScheduled:
     'I had an unexpected personal commitment that consumed my attention during that time, and I missed the scheduling window.',
   reasonToReactivate:
